# chat

./: .gitignore  .models.py.swp  .pre-commit-config.yaml  .prettierrc.json  .secrets.baseline  AGRO_FIXES_VALIDATION_REPORT.md  ARCHITECTURE_PRINCIPLES.md  ATCG_CHEMICAL_BOND_MAPPING_RESEARCH.md  BEE_CHRONICLER_ARCHITECTURAL_WISDOM_WHISPERS.md  BEE_CHRONICLER_COMPUTATIONAL_SAFETY_WHISPERS.md  BEE_CHRONICLER_DIVINE_COMMUNICATION_WHISPERS.md  BEE_CHRONICLER_SACRED_VISION_PRESERVATION_WHISPERS.md  BEE_SAGE_SESSION_1_CHRONICLES.md  BEE_SAGE_SESSION_2_SACRED_SEPARATION.md  BEE_SAGE_SESSION_3_COMPUTATIONAL_SAFETY.md  BEE_SAGE_SESSION_4_PRODUCTION_READINESS.md  BEE_SAGE_SESSION_5_SACRED_VISION_VALIDATION.md  BEE_SAGE_SESSION_6_DIVINE_COMMUNICATION.md  BEE_TO_PEER_AGRO_REVIEW.md  BEE_TO_PEER_REVIEW_STRATEGY.md  BRAINSTORMING_SESSION.md  CHRONICLES_NARRATIVE_SYNTHESIS.md  CLAUDE.md  CONSULTATION_WITH_EDDY.md  CONTRIBUTING.md  DEBIAN_PACKAGING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DIVINE_GUIDANCE_PRAYER.md  EMOTIONAL_CONTAGION_IMPLEMENTATION.md  FINAL_REVIEW.md  FINAL_SACRED_TEAM_SUMMARY.md  GEMINI.md  HIVE_ARCHITECTURE_COMPARISON.md  HIVE_ECOSYSTEM_ANALYSIS.md  HIVE_ORGANELLA_ECOSYSTEM_RESEARCH.md  HIVE_ORGANELLA_SVG_INTEGRATION.md  HIVE_ORGANELLA_VISUAL_MAPS.md  HONEYPOT_SEPARATION_STRATEGY.md  MERGE_CONFLICT_RESOLUTION.md  (+106 more)
.devcontainer/: Dockerfile
.github/: review-config.yml  simple-review-config.yml
agents/: base_agent.py  chat_agent.py
api/: chat.py  data_access.py  game_system.py  hive_status.py  organellas.py  real_hive_analysis.py  svg_vars_proposal.md  users.py
benchmarks/: atcg_performance_comparison.py
core/: honey.md
debian/: changelog  chat.dirs  chat.postrm.debhelper  control  files  postinst  rules
docs/: 01_ARCHITECTURE.md  02_ROADMAP.md  03_REQUIREMENTS.md  04_CHAT_MODERN_UI_PRD.md  04_IMPLEMENTATION_PLAN.md  05_PYTHON_LEARNING_MODULE_FRD.md  06_FEATURE_BRAINSTORM.md  07_CHAT_UX_IMPROVEMENT_PLAN.md  08_CHAT_VISUAL_ENHANCEMENTS.md  09_CHAT_CONTENT_LIFECYCLE_AND_VISUALS.md  10.md  10_ORGANELLE_GRIMOIRE.md  README.md  (+43 more)
(+403 files in other folders)
