[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.2",
    "jinja2>=3.1.6",
    "mistralai>=1.9.10",
    "psutil>=5.8.0",
    "python-dotenv>=0.19.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.setuptools]
py-modules = ["chat"]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]
