[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.2",
    "jinja2>=3.1.6",
    "mistralai>=1.9.10",
    "psutil>=5.8.0",
    "python-dotenv>=0.19.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "google-generativeai>=0.5.4",
    "p2pd>=0.1.0",
    "netifaces>=0.11.0",
    "dotenv>=0.9.9",
    "mistralai>=1.9.10",
    "websockets-cli>=0.3.0",
    "networkx>=3.4.2",
]

[tool.setuptools]
py-modules = ["chat"]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "ruff>=0.13.0",
    "ipdb>=0.13.13",
]
